<resources>
    <string name="app_name">AgeCalculator</string>
    <string name="btnCalcAge">Calculate Age</string>
    <string name="tvTitle">Katelyn\'s Age Calculator</string>
    <string name="tvDOB">Date of Birth</string>
    <string name="tvDOBSelection">Waiting for input..</string>
    <string name="tvDate">Age at the date of</string>
    <string name="tvDateSelection">Waiting for input..</string>
    <string name="btnSelectDOB">Select DOB</string>
    <string name="btnSelectDate">Select Date</string>
    <string name="tvAge">Age</string>
    <string name="tvAgeResult">Waiting for input..</string>
    <color name="lightpink">#FFC6D3</color>
    <color name="darkpink">#E98EAD</color>
    <color name="textcolor">#3A4F7A</color>
    <color name="subtextcolor">#865DFF</color>
</resources>